; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_command.c_adb_execute.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_command.c_adb_execute.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"-s\00", align 1
@PROCESS_SUCCESS = common dso_local global i32 0, align 4
@PROCESS_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @adb_execute(i8* %0, i8** %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8** %1, i8*** %6, align 8
  store i64 %2, i64* %7, align 8
  %14 = load i64, i64* %7, align 8
  %15 = add i64 %14, 4
  %16 = call i8* @llvm.stacksave()
  store i8* %16, i8** %8, align 8
  %17 = alloca i8*, i64 %15, align 16
  store i64 %15, i64* %9, align 8
  %18 = call i8* (...) @get_adb_command()
  %19 = getelementptr inbounds i8*, i8** %17, i64 0
  store i8* %18, i8** %19, align 16
  %20 = load i8*, i8** %5, align 8
  %21 = icmp ne i8* %20, null
  br i1 %21, label %22, label %26

22:                                               ; preds = %3
  %23 = getelementptr inbounds i8*, i8** %17, i64 1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8** %23, align 8
  %24 = load i8*, i8** %5, align 8
  %25 = getelementptr inbounds i8*, i8** %17, i64 2
  store i8* %24, i8** %25, align 16
  store i32 3, i32* %10, align 4
  br label %27

26:                                               ; preds = %3
  store i32 1, i32* %10, align 4
  br label %27

27:                                               ; preds = %26, %22
  %28 = load i32, i32* %10, align 4
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds i8*, i8** %17, i64 %29
  %31 = load i8**, i8*** %6, align 8
  %32 = load i64, i64* %7, align 8
  %33 = mul i64 %32, 8
  %34 = call i32 @memcpy(i8** %30, i8** %31, i64 %33)
  %35 = load i64, i64* %7, align 8
  %36 = load i32, i32* %10, align 4
  %37 = sext i32 %36 to i64
  %38 = add i64 %35, %37
  %39 = getelementptr inbounds i8*, i8** %17, i64 %38
  store i8* null, i8** %39, align 8
  %40 = getelementptr inbounds i8*, i8** %17, i64 0
  %41 = load i8*, i8** %40, align 16
  %42 = call i32 @cmd_execute(i8* %41, i8** %17, i32* %11)
  store i32 %42, i32* %12, align 4
  %43 = load i32, i32* %12, align 4
  %44 = load i32, i32* @PROCESS_SUCCESS, align 4
  %45 = icmp ne i32 %43, %44
  br i1 %45, label %46, label %50

46:                                               ; preds = %27
  %47 = load i32, i32* %12, align 4
  %48 = call i32 @show_adb_err_msg(i32 %47, i8** %17)
  %49 = load i32, i32* @PROCESS_NONE, align 4
  store i32 %49, i32* %4, align 4
  store i32 1, i32* %13, align 4
  br label %52

50:                                               ; preds = %27
  %51 = load i32, i32* %11, align 4
  store i32 %51, i32* %4, align 4
  store i32 1, i32* %13, align 4
  br label %52

52:                                               ; preds = %50, %46
  %53 = load i8*, i8** %8, align 8
  call void @llvm.stackrestore(i8* %53)
  %54 = load i32, i32* %4, align 4
  ret i32 %54
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i8* @get_adb_command(...) #2

declare dso_local i32 @memcpy(i8**, i8**, i64) #2

declare dso_local i32 @cmd_execute(i8*, i8**, i32*) #2

declare dso_local i32 @show_adb_err_msg(i32, i8**) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
